# Weather

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
journal/: 2026-04-27-phase-1-shipped.md  README.md  TEMPLATE.md
scripts/: backfill_observations.sh  diagnose_polymarket.py  run_observe.sh  setup.sh  status.sh
src/weather_bot/: __init__.py  cities.py  cli.py  config.py  http.py  logging_setup.py  scheduler.py
src/weather_bot/analysis/: decisions.py
src/weather_bot/data/: iem.py  open_meteo.py  polymarket.py
src/weather_bot/db/: __init__.py  connection.py  schema.sql
src/weather_bot/execution/: stub.py
src/weather_bot/model/: __init__.py  ensemble_count.py  residual.py
src/weather_bot/reporting/: status.py
tests/: test_cities.py  test_decisions.py  test_open_meteo_parsing.py  test_polymarket_filters.py
